@startuml
title Gateway — Servlet Filter Chain (post WebFlux Removal)

interface Filter <<jakarta.servlet>>
abstract class OncePerRequestFilter implements Filter

class GlobalTracingFilter extends OncePerRequestFilter {
  - traceContext : TraceContext
  + doFilterInternal(req, res, chain)
}

class JwtAuthenticationFilter extends OncePerRequestFilter {
  - jwtTokenProvider : JwtTokenProvider
  + doFilterInternal(req, res, chain)
}

class RateLimitFilter extends OncePerRequestFilter {
  - redis : StringRedisTemplate
  - script : RedisScript<Long>
  + doFilterInternal(req, res, chain)
}

class TenantInjectionFilter extends OncePerRequestFilter {
  + doFilterInternal(req, res, chain)
}

class TenantInjectingRequestWrapper {
  - tenantId : String
  - userId : String
  + getHeader(name) : String
  + getHeaders(name) : Enumeration<String>
  + getHeaderNames() : Enumeration<String>
}

class TenantStrippingRequestWrapper {
  + getHeader(name) : String
  + getHeaders(name) : Enumeration<String>
  + getHeaderNames() : Enumeration<String>
}

class JwtAuthenticationFilter .> SecurityContextHolder : writes authentication
TenantInjectionFilter .> SecurityContextHolder : reads tenantId/userId
TenantInjectionFilter *-- TenantInjectingRequestWrapper
TenantInjectionFilter *-- TenantStrippingRequestWrapper

class SecurityConfig {
  + filterChain(http, jwtFilter, rateLimitFilter, tenantFilter) : SecurityFilterChain
}

interface AuthenticationEntryPoint <<Spring Security>>
interface AccessDeniedHandler <<Spring Security>>

class JsonAuthenticationEntryPoint implements AuthenticationEntryPoint {
  - traceContext : TraceContext
  + commence(req, res, ex)
}

class JsonAccessDeniedHandler implements AccessDeniedHandler {
  - traceContext : TraceContext
  + handle(req, res, ex)
}

SecurityConfig --> JwtAuthenticationFilter : configures
SecurityConfig --> RateLimitFilter : configures
SecurityConfig --> TenantInjectionFilter : configures
SecurityConfig --> JsonAuthenticationEntryPoint : configures
SecurityConfig --> JsonAccessDeniedHandler : configures

note right of JwtAuthenticationFilter
  Order: BEFORE UsernamePasswordAuthenticationFilter
  Extracts JWT from httpOnly cookie or
  Authorization: Bearer header
end note

note right of RateLimitFilter
  Order: AFTER JwtAuthenticationFilter
  Uses Redis Lua token-bucket script
  Returns 429 on exhaustion
end note

note right of TenantInjectionFilter
  Order: AFTER RateLimitFilter
  Strips client-supplied X-Tenant-Id
  Injects gateway-derived X-Tenant-Id
  and X-User-Id from SecurityContext
end note

@enduml
